--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^8.2.4",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
